fixed layout issues

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,3 +1,12 @@
+html,
+body {
+  height: 100%;
+}
+
+body {
+  overflow: hidden;
+}
+
 button {
 	background: none;
 	border: 0;
