--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -6,18 +6,19 @@ body {
 
 .app {
 	&-menu {
-        position: fixed;
+    position: absolute;
 
-		min-width: 150px;
-		max-width: 200px;
-        height: calc(100% - 60px);
-        margin-top: 60px;
+    min-width: 150px;
+    max-width: 200px;
+    height: calc(100% - 60px);
+    margin-top: 60px;
 
 		background-color: white;
 		border-right: 1px solid rgba($black, .1);
 	}
 
 	&-wrapper {
+    position: absolute;
 		width: calc(100% - 200px);
 		margin-left: 200px;
 
@@ -28,8 +29,9 @@ body {
 	}
 
 	&-area {
-		padding: 2rem;
-		padding-top: 100px;
+    margin-top: 60px;
+    height: 100vh;
+    overflow-y: scroll;
 	}
 }
 
